<resources>
    <string name="app_name">Effigy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_confirm_pass">Should be same as password</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_final_page">FinalPageActivity</string>

    <!--Strings related to the Tab1-main page-->
    <string name="action_next_image">Next</string>
    <string name="action_finish_evaluation">Finish</string>
    <string name="evaluate_this_image">Evaluate this Image:</string>
    <string name="evaluated_images">Number of images you evaluated: </string>

    <!--Strings related to Tab2-->
    <string name="action_upload_image">Choose a new Image</string>

    <!--Strings related to the final page-->
    <string name="action_sign_out">Sign Out</string>
    <string name="action_start_again">Start Again</string>

    <string name="large_text">
       \n\nThank you for taking the time to evaluate the images!\n
        \nYou evaluated
    </string>
    <string name="large_text2">
       images from the following categories:\n
      \n<li>1.Products </li>\n
        <li>2.Museum Images</li>\n
    </string>
    <string name= "task_text">
        Your task is to assess the similarity of the colours and pattern in the four images presented based on the larger original image above.
    </string>
    <string name= "evaluation_text">
    \n<li>Rate the image, by choosing 1(worst) to 5(best) from the five stars shown below </li>\n
    \n<li>You will find the images by swiping from right to left on the image or by clicking on the dots</li>\n
   \n<li>After evaluating the four images, you can click the <b>Next</b> button and repeat the steps</li>\n
    </string>
    <string name="points_text">
        Done evaluating? Just hit <b>Finish</b> button and on the final page click on <b>Points</b> and see your ranking\n
    </string>
    <string name="action_welcome">Welcome</string>
    <string name="action_info_title">Information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Effigy</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">E-mail Address</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="password_confirm">Confirm Password</string>

</resources>
