<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thesis.effigy.com.effigy.MainActivity">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.06"
                android:weightSum="1">

                <TextView
                    android:text="@string/evaluated_images"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <!-- app:srcCompat="@android:drawable/presence_online"-->


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/reddress1"
                android:id="@+id/imageView2"
                android:layout_marginBottom="10dp"
                android:padding="5dp"/>

            <TextView
                android:text="@string/related_images"
                android:id="@+id/textView2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="7dp"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/reddress4"
                        android:id="@+id/imageView5"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"/>

                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar"
                        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                        android:numStars="5"
                        android:stepSize="1"
                        android:layout_below="@+id/imageView5"
                        android:layout_centerHorizontal="true"

                        android:rating="3"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/reddress3"
                        android:id="@+id/imageView4"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"/>


                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar2"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:numStars="5"
                        android:stepSize="1"
                        android:layout_below="@+id/imageView4"
                        android:layout_centerHorizontal="true"

                        android:rating="1" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/reddress4"
                        android:id="@+id/imageView6"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"/>


                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar4"
                        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                        android:numStars="5"
                        android:stepSize="1"
                        android:layout_below="@+id/imageView6"
                        android:layout_centerHorizontal="true"

                        android:rating="3"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/reddress4"
                        android:id="@+id/imageView7"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"/>


                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingBar3"
                        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                        android:numStars="5"
                        android:stepSize="1"
                        android:layout_below="@+id/imageView7"
                        android:layout_centerHorizontal="true"
                        android:rating="3"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/action_finish_evaluation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/finishButton"
                    android:background="@drawable/buttons_style"
                    android:elevation="2dp"
                    android:layout_weight="0.4"
                    android:padding="4dp"
                    android:textColor="@color/colorButtonText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:padding="5dp"/>

                <Button
                    android:text="@string/action_next_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nextButton"
                    android:background="@drawable/buttons_style"
                    android:elevation="2dp"
                    android:layout_weight="0.4"
                    android:padding="4dp"
                    android:textColor="@color/colorButtonText"/>

            </LinearLayout>
         <!--   <ProgressBar
                android:id="@+id/circular_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:indeterminate="false"
                android:max="48"
                android:progress="1"
                android:progressDrawable="@drawable/circular_ratingbar" />-->
        </LinearLayout>

    </ScrollView>



</RelativeLayout>
